# IsotericStore-Backend

./: README.md  main.py  pyproject.toml  settings.py
database/: db_helper.py
database/models/: __init__.py  good.py
database/operations/good/: __init__.py  crud.py  dependencies.py  schemas.py
routers/: __init__.py  goods.py  ordered_products.py  orders.py  services.py  shopping_carts.py  users.py
