[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FunDuckich <petrovegor495@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.30.0"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
